# medical-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CLAUDE.md  DESIGN.md  FEATURES.md  IMPLEMENTATION.md  README.md  SEARCH_IMPLEMENTATION.md  TESTING_GUIDE.md
evals/: README.md  escalation_tests.json  framework.py  search_tests.json  tool_call_tests.json
evals/data/: README.md
evals/data/20251015_121623/: escalation_eval.csv  escalation_tests.json  results.json
src/: README.md  __init__.py  knowledge_base.py  run_evals.py  telehealth_bot.py  telehealth_service.py
